2002-06-21  Darin Adler  <darin@apple.com>

	Cache the patterns we make for tiled images for added speed.

        * WebCoreSupport.subproj/IFImageRenderer.h: Removed declarations of
	methods inherited from WebCoreImageRenderer. Added patternColor field.

        * WebCoreSupport.subproj/IFImageRenderer.m:
        (-[IFImageRenderer dealloc]): Release patternColor.
        (-[IFImageRenderer beginAnimationInRect:fromRect:]): Get the view with
	[NSView focusView] rather than taking a parameter that's used only for
	the animating case.
        (-[IFImageRenderer tileInRect:fromPoint:]): New. Caches the pattern in
	the patternColor field.

        * WebView.subproj/IFImageView.m: (-[IFImageView drawRect:]): No need to
	pass view to image renderer any more.

2002-06-21  Darin Adler  <darin@apple.com>

	Fix rendering of non-opaque animated images.

	* WebCoreSupport.subproj/IFImageRenderer.m:
	(-[IFImageRenderer nextFrame:]): Use [NSView displayRect:] instead of
	drawing explicitly so that views behind us get a chance to draw too.
	This is less efficient than just drawing for opaque images, but NSImage
	doesn't offer a way to find out if the image is opaque. Also, this changes
	things a bit because beginAnimationInView gets called again, so we don't
	have to reschedule the timer.

2002-06-20  Richard Williamson (local)  <rjw@apple.com>

	* WebCoreSupport.subproj/IFImageRenderer.m:
	(-[IFImageRenderer frameDuration]):
	    Added minimum 1/60th second duration per frame.
	* WebView.subproj/IFDynamicScrollBarsView.m:
	(-[IFDynamicScrollBarsView updateScrollers]):
	    Only display scrollview if scrollers changed.
	* WebView.subproj/IFWebFramePrivate.mm:
	(-[IFWebFrame _setState:]):
	    Explicity turn on copiesOnScroll.  This may cause problems w/
	    plugins.  Need to verify once plugins are no longer crashing.

2002-06-20  Darin Adler  <darin@apple.com>

	Fix for leak where sub-frame IFHTMLViews would not call _stopPlugins.

	* Plugins.subproj/IFPluginView.mm: