@@ -1,5 +1,11 @@
 2002-06-21  Darin Adler  <darin@apple.com>
 
+        * WebCoreSupport.subproj/IFImageRenderer.m:
+        (-[IFImageRenderer nextFrame:]): Add back the higher-speed case where
+	we draw directly for opaque animated images.
+
+2002-06-21  Darin Adler  <darin@apple.com>
+
 	Cache the patterns we make for tiled images for added speed.
 
         * WebCoreSupport.subproj/IFImageRenderer.h: Removed declarations of
